src/objects/Product_Image__c.object
<CustomObject>
    <fields>
        <fullName>Image_Url__c</fullName>
        <label>Image Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Images</relationshipLabel>
        <relationshipName>Product_Images</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Image</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Img-{0000}</displayFormat>
        <label>Product Image Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Images</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>